# fanslate

./: .editorconfig  CHANGELOG.md  LICENSE  README.md  fanslate.cabal
exe/: Main.hs
src/: Fanslate.hs
src/Tool/Fanslate/: Apis.hs  Source.hs  Types.hs  Utils.hs
src/Tool/Fanslate/Google/: Api.hs  Type.hs
