cabal-version:      2.4
name:               fanslate
version:            0.1.0.0
synopsis:           Cross platform language translation

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             July541
maintainer:         julytreee@gmail.com

-- A copyright notice.
-- copyright:
category:           Tool
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Fanslate

    -- Modules included in this library but not exported.
    other-modules:    Tool.Fanslate.Apis
                    , Tool.Fanslate.Source
                    , Tool.Fanslate.Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:      -Wall
    build-depends:    base ^>=4.14.1.0
                    , servant
                    , servant-client
                    , http-api-data
                    , http-client
                    , http-types
                    , http-client-tls
                    , aeson
                    , text
                    , vector
                    , data-default
                    , bytestring
                    , utf8-string
    hs-source-dirs:   src
    default-language: Haskell2010

executable fanslate
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:      -Wall
    build-depends:
        base ^>=4.14.1.0,
        fanslate

    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite fanslate-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
